@@ -390,12 +390,15 @@ CLEANFILES = \
         smartd.8 \
         smartd.1m \
         smartd.8.html \
+        smartd.8.html.tmp \
         smartd.8.txt \
         smartctl.8 \
         smartctl.1m \
         smartctl.8.html \
+        smartctl.8.html.tmp \
         smartctl.8.txt \
         smartd.conf.5.html \
+        smartd.conf.5.html.tmp \
         smartd.conf.5.txt \
         smartd.initd \
         smartd.freebsd.initd \
@@ -427,7 +430,7 @@ utility.o: svnversion.h
 if IS_SVN_BUILD
 # Get version info from SVN
 svnversion.h: ChangeLog Makefile $(svn_deps)
-	@echo '  svn info | $$(VERSION_FROM_SVN_INFO) > $@'
+	@echo ' svn info | $$(VERSION_FROM_SVN_INFO) > $@'
 	@echo '/* svnversion.h.  Generated by Makefile from svn info.  */' > $@
 	@(cd $(srcdir) \
 	 && svnversion 2>/dev/null | sed -n 's,^\([0-9].*\),REV  "\1",p' \
@@ -438,7 +441,7 @@ else
 
 # SVN not available, guess version info from Id strings
 svnversion.h: ChangeLog Makefile
-	@echo '  cat ChangeLog $$(SOURCES) | $$(VERSION_FROM_SVN_IDS) > $@'
+	@echo ' cat ChangeLog $$(SOURCES) | $$(VERSION_FROM_SVN_IDS) > $@'
 	@echo '/* svnversion.h.  Generated by Makefile from Id strings.  */' > $@
 	@(cd $(srcdir) && cat ChangeLog Makefile.am configure.ac smart*.in *.cpp *.h *.s) \
 	| sed -n 's,^.*\$$[I][d]: [^ ]* \([0-9][0-9]* [0-9][-0-9]* [0-9][:0-9]*\)[^:0-9][^$$]*\$$.*$$,\1,p' \
@@ -528,14 +531,14 @@ systemdsystemunit_DATA = smartd.service
 endif
 
 smartd.service: smartd.service.in Makefile
-	@echo '  cat $(srcdir)/smartd.service.in | $$(SMARTD_SERVICE_FILTER) > $@'
-	@cat $(srcdir)/smartd.service.in | \
+	@echo ' $$(SMARTD_SERVICE_FILTER) < $(srcdir)/smartd.service.in > $@'
+	@{ \
 	sed 's|/usr/local/sbin/smartd|$(sbindir)/smartd|' | \
 	if test -n '$(systemdenvfile)'; then \
 	  sed 's|/usr/local/etc/sysconfig/smartmontools|$(systemdenvfile)|'; \
 	else \
 	  sed -e '/^EnvironmentFile=/d' -e 's| *\$$smartd[_a-z]* *||g'; \
-	fi > $@
+	fi; } < $(srcdir)/smartd.service.in > $@
 
 
 # Create empty directories if configured.
@@ -552,7 +555,7 @@ install-data-local: installdirs-local
 #
 # Build man pages
 #
-MAN_FILTER = \
+MAN_FILTER = { \
     sed -e 's|CURRENT_SVN_VERSION|$(releaseversion)|g' \
         -e "s|CURRENT_SVN_DATE|`sed -n 's,^.*DATE[^"]*"\([^"]*\)".*$$,\1,p' svnversion.h`|g" \
         -e "s|CURRENT_SVN_REV|`sed -n 's,^.*REV[^"]*"\([^"]*\)".*$$,r\1,p' svnversion.h`|g" \
@@ -608,24 +611,24 @@ MAN_FILTER = \
           -e 's,^!!!*,,' ; \
     else \
       cat; \
-    fi
+    fi; }
 
 # Implicit rule 'smart%: smart%.in ...' does not work with BSD make
 smartctl.8: smartctl.8.in Makefile svnversion.h
-	@echo '  cat $(srcdir)/smartctl.8.in | $$(MAN_FILTER) > $@'
-	@cat $(srcdir)/smartctl.8.in | $(MAN_FILTER) > $@
+	@echo ' $$(MAN_FILTER) < $(srcdir)/smartctl.8.in > $@'
+	@$(MAN_FILTER) < $(srcdir)/smartctl.8.in > $@
 
 smartd.8: smartd.8.in Makefile svnversion.h
-	@echo '  cat $(srcdir)/smartd.8.in | $$(MAN_FILTER) > $@'
-	@cat $(srcdir)/smartd.8.in | $(MAN_FILTER) > $@
+	@echo ' $$(MAN_FILTER) < $(srcdir)/smartd.8.in > $@'
+	@$(MAN_FILTER) < $(srcdir)/smartd.8.in > $@
 
 smartd.conf.5: smartd.conf.5.in Makefile svnversion.h
-	@echo '  cat $(srcdir)/smartd.conf.5.in | $$(MAN_FILTER) > $@'
-	@cat $(srcdir)/smartd.conf.5.in | $(MAN_FILTER) > $@
+	@echo ' $$(MAN_FILTER) < $(srcdir)/smartd.conf.5.in > $@'
+	@$(MAN_FILTER) < $(srcdir)/smartd.conf.5.in > $@
 
 update-smart-drivedb.8: update-smart-drivedb.8.in Makefile svnversion.h
-	@echo '  cat $(srcdir)/update-smart-drivedb.8.in | $$(MAN_FILTER) > $@'
-	@cat $(srcdir)/update-smart-drivedb.8.in | $(MAN_FILTER) > $@
+	@echo ' $$(MAN_FILTER) < $(srcdir)/update-smart-drivedb.8.in > $@'
+	@$(MAN_FILTER) < $(srcdir)/update-smart-drivedb.8.in > $@
 
 # Build Solaris specific man pages
 SOLARIS_MAN_FILTER = \
@@ -636,20 +639,20 @@ SOLARIS_MAN_FILTER = \
         -e 's,/var/log/messages,/var/adm/messages,g'
 
 smartctl.1m: smartctl.8
-	@echo '  cat smartctl.8 | $$(SOLARIS_MAN_FILTER) > $@'
-	@cat smartctl.8 | $(SOLARIS_MAN_FILTER) > $@
+	@echo ' $$(SOLARIS_MAN_FILTER) < smartctl.8 > $@'
+	@$(SOLARIS_MAN_FILTER) < smartctl.8 > $@
 
 smartd.1m: smartd.8
-	@echo '  cat smartd.8 | $$(SOLARIS_MAN_FILTER) > $@'
-	@cat smartd.8 | $(SOLARIS_MAN_FILTER) > $@
+	@echo ' $$(SOLARIS_MAN_FILTER) < smartd.8 > $@'
+	@$(SOLARIS_MAN_FILTER) < smartd.8 > $@
 
 smartd.conf.4: smartd.conf.5
-	@echo '  cat smartd.conf.5 | $$(SOLARIS_MAN_FILTER) > $@'
-	@cat smartd.conf.5 | $(SOLARIS_MAN_FILTER) > $@
+	@echo ' $$(SOLARIS_MAN_FILTER) < smartd.conf.5 > $@'
+	@$(SOLARIS_MAN_FILTER) < smartd.conf.5 > $@
 
 update-smart-drivedb.1m: update-smart-drivedb.8
-	@echo '  cat update-smart-drivedb.8 | $$(SOLARIS_MAN_FILTER) > $@'
-	@cat update-smart-drivedb.8 | $(SOLARIS_MAN_FILTER) > $@
+	@echo ' $$(SOLARIS_MAN_FILTER) < update-smart-drivedb.8 > $@'
+	@$(SOLARIS_MAN_FILTER) < update-smart-drivedb.8 > $@
 
 
 # Commands to convert man pages into .html and .txt
@@ -671,21 +674,15 @@ htmlman: smartctl.8.html smartd.8.html smartd.conf.5.html
 
 txtman:  smartctl.8.txt smartd.8.txt smartd.conf.5.txt
 
-if OS_WIN32_MINGW
-
 %.5.html: %.5
-	$(DOS2UNIX) < $< | $(MAN2HTML) | $(FIXHTML) > $@
+	$(MAN2HTML) $< > $@.tmp
+	@echo ' $$(FIXHTML) < $@.tmp > $@'
+	@$(FIXHTML) < $@.tmp > $@
 
 %.8.html: %.8
-	$(DOS2UNIX) < $< | $(MAN2HTML) | $(FIXHTML) > $@
-else
-
-%.5.html: %.5
-	$(MAN2HTML) $< | $(FIXHTML) > $@
-
-%.8.html: %.8
-	$(MAN2HTML) $< | $(FIXHTML) > $@
-endif
+	$(MAN2HTML) $< > $@.tmp
+	@echo ' $$(FIXHTML) < $@.tmp > $@'
+	@$(FIXHTML) < $@.tmp > $@
 
 %.5.txt: %.5
 	$(MAN2TXT) $< > $@
@@ -713,18 +710,20 @@ smartd_res.o: smartd_res.rc syslogevt.rc
 	$(WINDRES) -I. $< $@
 
 # Convert version for VERSIONINFO resource: 6.1 r3754 -> 6.1.0.3754, set Copyright year
-WIN_RC_FILTER = \
-    ( ver=`echo '$(PACKAGE_VERSION).0' | sed -n 's,^\([0-9]*\.[0-9]*\.[0-9]*\).*$$,\1,p'`; \
-      rev=`sed -n 's,^.*REV[^"]*"\([0-9]*\).*$$,\1,p' svnversion.h`; \
-      txtver="$${ver:-0.0.0}.$${rev:-0}"; binver=`echo "$$txtver" | sed 's|\.|,|g'`; \
-      yy=`sed -n 's,^.*DATE[^"]*"20\([0-9][0-9]\).*$$,\1,p' svnversion.h`; yy="$${yy:-XX}"; \
-      sed -e "s|@BINARY_VERSION@|$$binver|g" -e "s|@TEXT_VERSION@|$$txtver|g" -e "s|@YY@|$$yy|g"; )
+WIN_RC_FILTER = { \
+    ver=`echo '$(PACKAGE_VERSION).0' | sed -n 's,^\([0-9]*\.[0-9]*\.[0-9]*\).*$$,\1,p'` && \
+    rev=`sed -n 's,^.*REV[^"]*"\([0-9]*\).*$$,\1,p' svnversion.h` && \
+    txtver="$${ver:-0.0.0}.$${rev:-0}" && binver=`echo "$$txtver" | sed 's|\.|,|g'` && \
+    yy=`sed -n 's,^.*DATE[^"]*"20\([0-9][0-9]\).*$$,\1,p' svnversion.h` && yy="$${yy:-XX}" && \
+    sed -e "s|@BINARY_VERSION@|$$binver|g" -e "s|@TEXT_VERSION@|$$txtver|g" -e "s|@YY@|$$yy|g"; }
 
 smartctl_res.rc: os_win32/smartctl_res.rc.in Makefile svnversion.h
-	cat $< | $(WIN_RC_FILTER) > $@
+	@echo ' $$(WIN_RC_FILTER) < $< > $@'
+	@$(WIN_RC_FILTER) < $< > $@
 
 smartd_res.rc: os_win32/smartd_res.rc.in Makefile svnversion.h
-	cat $< | $(WIN_RC_FILTER) > $@
+	@echo ' $$(WIN_RC_FILTER) < $< > $@'
+	@$(WIN_RC_FILTER) < $< > $@
 
 syslogevt.rc: os_win32/syslogevt.mc
 	$(WINDMC) -b $<
@@ -798,10 +797,8 @@ CLEANFILES += \
         update-smart-drivedb.exe \
         distdir.mkdir
 
-# Textfile converter from package cygutils or tofrodos
-# Note: Only use without options to be compatible with both packages
+# Note: Only use without options to be compatible with all variants
 UNIX2DOS = unix2dos
-DOS2UNIX = dos2unix
 
 # Build Windows distribution
 
@@ -826,11 +823,11 @@ if OS_WIN32_NSIS
 # Note: Only option character '-' is also compatible with Linux version of makensis
 $(distinst_win32): os_win32/installer.nsi distdir.mkdir $(FILES_WIN32)
 	test -z '$(builddir_win64)' || ( cd $(builddir_win64) && make distdir-win32 )
-	@date=`sed -n 's,^.*DATE[^"]*"\([^"]*\)".*$$,\1,p' svnversion.h`; \
-	rev=`sed -n 's,^.*REV[^"]*"\([^"]*\)".*$$,r\1,p' svnversion.h`; \
-	verstr="$(PACKAGE_VERSION) $$date $$rev "$(BUILD_INFO); \
-	d64=; test -z '$(builddir_win64)' || d64='-DINPDIR64=$(builddir_win64)/$(PACKAGE)-$(VERSION).win64'; \
-	echo "'$(MAKENSIS)' -V2 -NOCD -DINPDIR=$(distdir_win32) $$d64 -DOUTFILE=$@ -DVERSTR='$$verstr' $<"; \
+	@date=`sed -n 's,^.*DATE[^"]*"\([^"]*\)".*$$,\1,p' svnversion.h` && \
+	rev=`sed -n 's,^.*REV[^"]*"\([^"]*\)".*$$,r\1,p' svnversion.h` && \
+	verstr="$(PACKAGE_VERSION) $$date $$rev "$(BUILD_INFO) && \
+	d64= && if [ -n '$(builddir_win64)' ]; then d64='-DINPDIR64=$(builddir_win64)/$(PACKAGE)-$(VERSION).win64'; fi && \
+	echo "'$(MAKENSIS)' -V2 -NOCD -DINPDIR=$(distdir_win32) $$d64 -DOUTFILE=$@ -DVERSTR='$$verstr' $<" && \
 	'$(MAKENSIS)' -V2 -NOCD -DINPDIR=$(distdir_win32) $$d64 -DOUTFILE=$@ -DVERSTR="$$verstr" $<
 	md5sum $@ > $@.md5
 	sha1sum $@ > $@.sha1
